# floaty

./: CMakeLists.txt  cmake-variants.json
include/: Game.h  Player.h  World.h  raycast.h
include/core/: rectf.h  time.h  vec.h  vec2f.h
include/floaty/: floaty.h  input.h  player.h  world.h
include/graphics/: color.h  renderer.h
src/: Game.c  Player.c  World.c  main.c
src/core/: rectf.c  time.c  vec.c  vec2f.c
src/floaty/: floaty.c  player.c  world.c
src/graphics/: renderer.c
